--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "next": "13.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-responsive": "^9.0.0",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.1.5",
-    "react-datepicker": "^4.8.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
     "sass": "^1.56.1",
     "scss": "^0.2.4",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.8.0"
   }
 }
